# project-00-ground-zero

./: .env.example  .gitignore  .pre-commit-config.yaml  APPLY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  metadata.json  platform-contract.yml  pricing.yml  pyproject.toml  requirements-brief-e.txt  runtime-contract.yml
.github/workflows/: ci.yml  deploy-azure.yml  eval-regression.yml  pr-comment-bot.yml  red-team.yml  security-scan.yml  teardown-azure.yml
data/: README.md  fine-tune-corpus.jsonl
docs/: 00-charter.md  05-runbook.md  06-tco.xlsx  08-tech-stack-coverage-matrix.md
docs/03-ADR/: 0014-sk-vs-langgraph.md  0015-docling-vs-doc-intelligence.md  0016-llamaindex-alongside-native.md  0017-colpali-for-structure-rich-pages.md  0018-functions-for-scheduled-utilities.md  0019-allam-for-regional-signal.md  0020-nextjs-deferred-by-design.md
docs/07-poc-specifications/: builder-brief-a-platform-identity.md  builder-brief-b-runtime-substrate.md  builder-brief-c-delivery-pipeline.md  builder-brief-d-portfolio-control-plane.md  builder-brief-e-hello-ai.md
html/: architecture.html
infra/local/: pgvector-init.sql
infra/terraform/: ai-search.tf  aoai.tf  container-apps-env.tf  keyvault.tf  main.tf  managed-identity.tf
schemas/: ledger.schema.json  metadata.schema.json
scripts/: create-demo-fails-branches.sh  deploy.sh  gate-g1.sh  gate-g2.sh  gate-g3.sh  gate-g4.sh  generate_sample_form.py  ledger-write.sh  metadata-validate.sh  pr-comment-bot.sh  run-api.sh  run-ui.sh  teardown-azure.sh
src/: __init__.py  config.py  main.py
tests/: pytest.ini
(+55 files in other folders)
